--- a/yoyaku_system/bus_yoyaku.html
+++ b/yoyaku_system/bus_yoyaku.html
@@ -46,6 +46,9 @@
     <div class="seat" onclick="reserveSeat(23)">席23</div>
     <div class="seat" onclick="reserveSeat(24)">席24</div>
     <div class="seat" onclick="reserveSeat(25)">席25</div>
+    <div class="seat" onclick="reserveSeat(26)">席26</div>
+    <div class="seat" onclick="reserveSeat(27)">席27</div>
+    <div class="seat" onclick="reserveSeat(28)">席28</div>
 
 </div>
 
