--- a/yoyaku_system/bus_yoyaku.html
+++ b/yoyaku_system/bus_yoyaku.html
@@ -1,82 +1,186 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>席の予約システム</title>
     <style>
-        .seat {
-            padding: 10px 20px;
-            margin: 10px;
-            border: 2px solid #000;
-            display: inline-block;
-            cursor: pointer;
-        }
+      .parent {
+        display: flex;
+      }
+      .sun {
+        padding: 10px 10px;
+        margin: 10px;
+        border: 4px solid #000;
+        height: 370px;
+        width: 1050px;
+      }
+      .senaka {
+        padding: 20px 10px;
+        margin: 0px 0px -20px -30px;
+        border: 4px solid #000;
+        display: block;
+        cursor: pointer;
+        border-radius: 10px;
+        height: 40px;
+        width: 1px;
+      }
+      .seat {
+        padding: 20px 10px;
+        margin: 0px 0px 0px 40px;
+        border: 4px solid #000;
+        font-size: 35px;
+        text-indent: -5px;
+        font-family: "arialblack", "sans-serif";
+        display: block;
+        cursor: pointer;
+        border-radius: 9px;
+        height: 40px;
+        width: 60px;
+      }
+      .untenseki1 {
+        padding: 20px 10px;
+        margin: 0px 0px 0px 40px;
+        display: block;
+        cursor: pointer;
+        border-right: 6px double #000;
+        border-top: 6px double #000;
+        height: 40px;
+        width: 60px;
+      }
+      .untenseki2 {
+        padding: 20px 10px;
+        margin: 0px 0px 0px 40px;
+        display: block;
+        cursor: pointer;
+        border-right: 6px double #000;
+        border-bottom: 6px double #000;
+        height: 40px;
+        width: 60px;
+      }
+      .noru {
+        padding: 20px 10px;
+        margin: 20px 0px 0px 40px;
+        border: 4px double #000;
+        display: block;
+        cursor: pointer;
+        height: 20px;
+        width: 60px;
+      }
+      .kieru {
+        opacity: 0;
+      }
 
-        .reserved {
-            background-color: #FFD700;
-        }
+      .reserved {
+        background-color: #ffd700;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
+    <div id="seats" class="sun">
+      <div class="parent">
+        <div class="untenseki1"></div>
+        <div class="senaka kieru"></div>
+        <div class="seat" onclick="reserveSeat(1)">&nbsp;1</div>
+        <div class="senaka" onclick="reserveSeat(1)"></div>
+        <div class="seat" onclick="reserveSeat(2)">&nbsp;2</div>
+        <div class="senaka" onclick="reserveSeat(2)"></div>
+        <div class="seat" onclick="reserveSeat(3)">&nbsp;3</div>
+        <div class="senaka" onclick="reserveSeat(3)"></div>
+        <div class="seat" onclick="reserveSeat(4)">&nbsp;4</div>
+        <div class="senaka" onclick="reserveSeat(4)"></div>
+        <div class="seat" onclick="reserveSeat(5)">&nbsp;5</div>
+        <div class="senaka" onclick="reserveSeat(5)"></div>
+        <div class="seat" onclick="reserveSeat(6)">&nbsp;6</div>
+        <div class="senaka" onclick="reserveSeat(6)"></div>
+        <div class="seat" onclick="reserveSeat(7)">&nbsp;7</div>
+        <div class="senaka" onclick="reserveSeat(7)"></div>
+      </div>
+      <div class="parent">
+        <div class="untenseki2"></div>
+        <div class="senaka kieru"></div>
+        <div class="seat" onclick="reserveSeat(8)">&nbsp;8</div>
+        <div class="senaka" onclick="reserveSeat(8)"></div>
+        <div class="seat" onclick="reserveSeat(9)">&nbsp;9</div>
+        <div class="senaka" onclick="reserveSeat(9)"></div>
+        <div class="seat" onclick="reserveSeat(10)">10</div>
+        <div class="senaka" onclick="reserveSeat(10)"></div>
+        <div class="seat" onclick="reserveSeat(11)">11</div>
+        <div class="senaka" onclick="reserveSeat(11)"></div>
+        <div class="seat" onclick="reserveSeat(12)">12</div>
+        <div class="senaka" onclick="reserveSeat(12)"></div>
+        <div class="seat" onclick="reserveSeat(13)">13</div>
+        <div class="senaka" onclick="reserveSeat(13)"></div>
+        <div class="seat" onclick="reserveSeat(14)">14</div>
+        <div class="senaka" onclick="reserveSeat(14)"></div>
+      </div>
+      <div class="parent">
+        <div class="seat kieru"></div>
+        <div class="senaka kieru"></div>
+        <div class="seat kieru"></div>
+        <div class="senaka kieru"></div>
+        <div class="seat kieru"></div>
+        <div class="senaka kieru"></div>
+        <div class="seat kieru"></div>
+        <div class="senaka kieru"></div>
+        <div class="seat kieru"></div>
+        <div class="senaka kieru"></div>
+        <div class="seat kieru"></div>
+        <div class="senaka kieru"></div>
+        <div class="seat kieru"></div>
+        <div class="senaka kieru"></div>
+        <div class="seat" onclick="reserveSeat(15)">15</div>
+        <div class="senaka" onclick="reserveSeat(15)"></div>
+      </div>
+      <div class="parent">
+        <div class="seat" onclick="reserveSeat(16)">16</div>
+        <div class="senaka" onclick="reserveSeat(16)"></div>
+        <div class="seat" onclick="reserveSeat(17)">17</div>
+        <div class="senaka" onclick="reserveSeat(17)"></div>
+        <div class="noru">搭乗口</div>
+        <div class="seat" onclick="reserveSeat(18)">18</div>
+        <div class="senaka" onclick="reserveSeat(18)"></div>
+        <div class="seat" onclick="reserveSeat(19)">19</div>
+        <div class="senaka" onclick="reserveSeat(19)"></div>
+        <div class="seat" onclick="reserveSeat(20)">20</div>
+        <div class="senaka" onclick="reserveSeat(20)"></div>
+        <div class="seat" onclick="reserveSeat(21)">21</div>
+        <div class="senaka" onclick="reserveSeat(21)"></div>
+        <div class="seat" onclick="reserveSeat(22)">22</div>
+        <div class="senaka" onclick="reserveSeat(22)"></div>
+      </div>
+    </div>
 
-<div id="seats">
-    <div class="seat" onclick="reserveSeat(1)">席1</div>
-    <div class="seat" onclick="reserveSeat(2)">席2</div>
-    <div class="seat" onclick="reserveSeat(3)">席3</div>
-    <div class="seat" onclick="reserveSeat(4)">席4</div>
-    <div class="seat" onclick="reserveSeat(5)">席5</div>
-    <div class="seat" onclick="reserveSeat(6)">席6</div>
-    <div class="seat" onclick="reserveSeat(7)">席7</div>
-    <div class="seat" onclick="reserveSeat(8)">席8</div>
-    <div class="seat" onclick="reserveSeat(9)">席9</div>
-    <div class="seat" onclick="reserveSeat(10)">席10</div>
-    <div class="seat" onclick="reserveSeat(11)">席11</div>
-    <div class="seat" onclick="reserveSeat(12)">席12</div>
-    <div class="seat" onclick="reserveSeat(13)">席13</div>
-    <div class="seat" onclick="reserveSeat(14)">席14</div>
-    <div class="seat" onclick="reserveSeat(15)">席15</div>
-    <div class="seat" onclick="reserveSeat(16)">席16</div>
-    <div class="seat" onclick="reserveSeat(17)">席17</div>
-    <div class="seat" onclick="reserveSeat(18)">席18</div>
-    <div class="seat" onclick="reserveSeat(19)">席19</div>
-    <div class="seat" onclick="reserveSeat(20)">席20</div>
-    <div class="seat" onclick="reserveSeat(21)">席21</div>
-    <div class="seat" onclick="reserveSeat(22)">席22</div>
-    <div class="seat" onclick="reserveSeat(23)">席23</div>
-    <div class="seat" onclick="reserveSeat(24)">席24</div>
-    <div class="seat" onclick="reserveSeat(25)">席25</div>
+    <button onclick="confirmReservation()">予約決定</button>
 
-</div>
+    <script>
+      let selectedSeat = null;
+      let selectedSeatNumber = null;
 
-<button onclick="confirmReservation()">予約決定</button>
-
-<script>
-    let selectedSeat = null;
-    let selectedSeatNumber = null;
-
-    function reserveSeat(seatNumber) {
+      function reserveSeat(seatNumber) {
         // 既に選択されている席があれば、その色をリセット
         if (selectedSeat) {
-            selectedSeat.classList.remove('reserved');
+          selectedSeat.classList.remove("reserved");
         }
 
-        // 新しく選択した席の色を変更 
-        const seatElement = document.querySelector(`#seats .seat:nth-child(${seatNumber})`);
-        seatElement.classList.add('reserved');
+        // 新しく選択した席の色を変更
+        const seatElement = document.querySelector(
+          `#seats .seat:nth-child(${seatNumber})`
+        );
+
+        seatElement.classList.add("reserved");
 
         selectedSeat = seatElement;
         selectedSeatNumber = seatNumber;
-    }
+      }
 
-    function confirmReservation() {
+      function confirmReservation() {
         if (selectedSeat) {
-            alert(`席${selectedSeatNumber}の予約が完了しました！`);
+          alert(`席${selectedSeatNumber}の予約が完了しました！`);
         } else {
-            alert("席を選択してください。");
+          alert("席を選択してください。");
         }
-    }
-</script>
-
-</body>
+      }
+    </script>
+  </body>
 </html>
