--- a/regist_system/login.html
+++ b/regist_system/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>regist_system_defalt</title>
+    <title>regist_system_login</title>
 
     <link href="regist_system_defalt.css" rel="stylesheet">
 </head>
@@ -17,9 +17,12 @@
     </header>
 
     <div class="container">
-        <button type="submit" class="btn">決定</button> 
+        <form>
+            <input type="text" placeholder="ID" name="id" required="">
+            <input type="password" placeholder="パスワード" name="password" required="">
+            <button type="submit" class="btn"></button>
+        </form> 
     </div>
-    
 
     <footer class="footer">
         <div class="footer-container">
