--- a/yoyaku_system/yayaku_system_defalt.html
+++ b/yoyaku_system/yayaku_system_defalt.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>regist_system_defalt</title>
+    <title>yayaku_system_defalt</title>
 
-    <link href="regist_system_defalt.css" rel="stylesheet">
+    <link href="yayaku_system_defalt.css" rel="stylesheet">
 </head>
 
 <body>
