不必要なファイルの消去

--- a/regist_system/2_menu.html
+++ b/regist_system/2_menu.html
@@ -35,7 +35,7 @@
             flex-direction: column;
             flex-flow: column;
             align-items: center;
-        }    
+        }
 
         .btn {
             display: inline-block;
@@ -86,10 +86,10 @@
     <h1>メニュー</h1>
 
     <div class="container">
-        <a href="3_scan.html"><button type="submit" class="btn">利用者登録</button></a>
+        <button type="submit" class="btn" action="/add">利用者登録</button></a>
         <a href="1_login.html"><button type="submit" class="btn">ログアウト</button> </a>
     </div>
-    
+
 
     <footer class="footer">
         <div class="footer-container">
