予約システム（席選択以外）

--- a/yoyaku_system/yoyaku_kobetuyoyaku.html
+++ b/yoyaku_system/yoyaku_kobetuyoyaku.html
@@ -44,7 +44,7 @@
         text-align: center;
         font-size: 30px;
         font-weight: bold; /* ボタンの太さ */
-        top: 60%;
+        top: 80%;
       }
 
       .btn:hover {
@@ -76,14 +76,6 @@
         margin: auto;
         top: 50%;
       }
-      .come {
-        display: inline-block;
-        position: absolute;
-        margin: auto;
-        top: -70%;
-        left: 25px;
-        font-size: 25px;
-      }
     </style>
   </head>
 
@@ -96,9 +88,7 @@
 
     <div class="container">
       <div class="box">
-        <div class="come">本当にキャンセルしますか？</div>
-        <button type="submit" class="btn">予約取消の確定</button>
-        <a href="yoyaku_kozin.html"><button type="submit" class="btn">戻る</button>
+        <button type="submit" class="btn">戻る</button>
       </div>
     </div>
 
